--- a/space-tourism/index.html
+++ b/space-tourism/index.html
@@ -1,27 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/css/home.css">
+  <link rel="stylesheet" href="./assets/css/header.css">
+  <!-- <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png"> -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Space tourism website</title>
+  <title>Space tourism | Explore the wonder in the life beyond...</title>
 </head>
+
 <body>
+  <header class="header" data-header>
+    <div class="wrapper">
+      <img src="./assets/shared/logo.svg" alt="space-travel">
+      <nav class="navbar">
+        <!-- <div class="blur"> -->
+          <ul class="list-item">
+            <div class="stroke"></div>
+            <li><a class="link" href="#" data-nav-link>00 Home</a></li>
+            <li><a class='link' href="./destination-europa.html" data-nav-link>01 Destination</a></li>
+            <li><a class='link' href="./crew-commander.html" data-nav-link>02 Crew</a></li>
+            <li><a class='link' href="./technology-capsule.html" data-nav-link>03 Technology</a></li>
+          </ul>
+        <!-- </div> -->
+       
+      </nav>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+      <div class="hamburger" data-hamburger>
+        <img class="open-hamburger" src="./assets/shared/icon-hamburger.svg" alt="open-btn">
+        <img class="close-hamburger" src="./assets/shared/icon-close.svg" alt="close-btn">
+      </div>
+    </div>
+  </header>
+    <main>
+      <div class="wrapper">
+        <h5>So, you want to travel to</h5>
 
-  So, you want to travel to
-  Space
-  Let’s face it; if you want to go to space, you might as well genuinely go to 
-  outer space and not hover kind of on the edge of it. Well sit back, and relax 
-  because we’ll give you a truly out of this world experience!
+      <h1>Space</h1>
 
-  Explore
+      <p> Let’s face it; if you want to go to space, you might as well genuinely go to
+        outer space and not hover kind of on the edge of it. Well sit back, and relax
+        because we’ll give you a truly out of this world experience!
+      </p>
 
+      <div class="button">
+        <button>Explore</button>
+      </div>
+      </div>
+    </main>
+
+    <script src="./assets/js/header.js"></script>
 </body>
+
 </html>
